--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@tanstack/react-router": "0.0.1-beta.190",
+    "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.14",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@types/mapbox-gl": "^2.7.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
