--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node-lts": "^18.12.5",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.2",
     "nodemon": "^3.0.1",
