--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@tsconfig/node-lts": "^18.12.5",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
