--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-router": "0.0.1-beta.190",
     "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.1.6"
+    "react-map-gl": "^7.1.6",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.14",
