--- a/drowsydriver_detector/pyproject.toml
+++ b/drowsydriver_detector/pyproject.toml
@@ -5,3 +5,5 @@ version = "1.0"
 [build-system]
 requires = ["setuptools", "wheel"]
 
+[tool.setuptools.dynamic.dependencies]
+file = [ "requirements.txt" ]
