--- a/stream/requirements.txt
+++ b/stream/requirements.txt
@@ -3,4 +3,5 @@ opencv-python==4.8.0.76
 numpy==1.26.0
 Flask==2.3.3
 imutils==0.5.4
+dlib==19.24.2
 drowsydriver_detector@ git+https://github.com/DrowsyDriverAI/drowsydriver#egg=drowsydriver_detector&subdirectory=drowsydriver_detector
