--- a/stream/Dockerfile
+++ b/stream/Dockerfile
@@ -1,7 +1,7 @@
 # Use an official Python runtime as a parent image
 FROM python:3.11
 
-RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 -y
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 cmake -y
 
 # Set the working directory in the container
 WORKDIR /app
