--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-version: '3'
+version: '3.9'
 services:
   app:
     build:
       context: ./app
     environment:
       VITE_API_URL: 'http://api:4000'
+      DETECTOR_API_URL: 'http://stream:8080'
     ports:
       - "3000:3000"
   api:
