--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,44 @@
 version: '3.9'
 services:
+  traefik:
+    profiles:
+      - proxy
+    image: traefik:latest
+    command:
+      - --providers.docker=true
+      - --entrypoints.web.address=:80
+      - --entrypoints.web.http.redirections.entryPoint.to=websecure
+      - --entrypoints.web.http.redirections.entryPoint.scheme=https
+      - --entrypoints.websecure.address=:443
+      - --certificatesresolvers.cloudflare.acme.dnschallenge=true
+      - --certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare
+      - --certificatesresolvers.cloudflare.acme.email=contact@warrensnipes.dev
+      - --certificatesresolvers.cloudflare.acme.storage=/letsencrypt/acme.json
+    ports:
+      - "80:80"
+      - "443:443"
+    env_file:
+      - cloudflare.env
+    #environment:
+    #  CLOUDFLARE_EMAIL: *****************************
+    #  CLOUDFLARE_API_KEY: *****************************
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./letsencrypt:/letsencrypt
+  whoami:
+    profiles:
+      - whoami
+    image: traefik/whoami
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.whoami.rule=Host(`ddapiwhoami.warrensnipes.org`)
+      - traefik.http.services.whoami.loadbalancer.server.port=80
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.tls.certresolver=cloudflare
   app:
+    #profiles:
+    #  - frontend
     build:
       context: ./app
     environment:
@@ -15,8 +53,36 @@ services:
       - secret.env
     ports:
       - "4000:4000"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.whoami.rule=Host(`ddapi.warrensnipes.org`)
+      - traefik.http.services.whoami.loadbalancer.server.port=4000
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.tls.certresolver=cloudflare
+  admin:
+    build:
+      context: ./api
+    env_file:
+      - secret.env
+    ports:
+      - "6000:6000"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.whoami.rule=Host(`ddadmin.warrensnipes.org`)
+      - traefik.http.services.whoami.loadbalancer.server.port=6000
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.tls.certresolver=cloudflare
   stream:
     build:
       context: ./stream
     ports:
       - "8080:8080"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.whoami.rule=Host(`ddstreaming.warrensnipes.org`)
+      - traefik.http.services.whoami.loadbalancer.server.port=8080
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.tls.certresolver=cloudflare
