--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       - traefik.http.routers.whoami.tls.certresolver=cloudflare
   admin:
     build:
-      context: ./api
+      context: ./admin
     env_file:
       - secret.env
     ports:
